[package]
name = "beamcli"
version = "0.1.5"
edition = "2021"
authors = ["Michael Mandel <michael@mandel.dev>"]
license = "MIT"
description = "An Interface on top of the Teleport CLI."
readme = "README.md"
homepage = "https://github.com/MichaelMandel26/beam"
repository = "https://github.com/MichaelMandel26/beam"
keywords = ["cli", "teleport", "beam"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.47"
clearscreen = "1.0.7"
colored = "2.0.0"
home = "0.5.3"
indicatif = "0.16.2"
itertools = "0.10.3"
lazy_static = "1.4.0"
reqwest = "0.11.7"
semver = "1.0.4"
serde = {version="1.0.130", features=["derive"]}
serde_json = "1.0.71"
skim = "0.9.4"
structopt = "0.3.25"
tokio = { version = "1.14.0", features = ["full"] }
toml = "0.5.8"
whoami = "1.2.0"
