[package]
authors = ["Michael Mandel <michael@mandel.dev>"]
categories = ["command-line-utilities"]
description = "An Interface on top of the Teleport CLI."
edition = "2021"
homepage = "https://github.com/MichaelMandel26/beam"
keywords = ["cli", "teleport", "beam"]
license = "MIT"
name = "beamcli"
readme = "README.md"
repository = "https://github.com/MichaelMandel26/beam"
version = "0.5.0"

[dependencies]
anyhow = "1.0.47"
clap = {version = "4.0", features = ["derive"]}
clap_complete = "4.0"
clearscreen = "1.0.7"
colored = "2.0.0"
home = "0.5.3"
indicatif = "0.17"
itertools = "0.10.3"
lazy_static = "1.4.0"
regex = "1.5.6"
reqwest = {version = "0.11.7", default-features = false, features = ["rustls-tls"]}
semver = "1.0.4"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.71"
skim = "0.9.4"
tokio = {version = "1.14.0", features = ["full"]}
toml = "0.5.8"
whoami = "1.2.0"

[dev-dependencies]
httpmock = "0.6"
