[package]
authors = ["Michael Mandel <michael@mandel.dev>"]
categories = ["command-line-utilities"]
description = "An Interface on top of the Teleport CLI."
edition = "2021"
homepage = "https://github.com/MichaelMandel26/beam"
keywords = ["cli", "teleport", "beam"]
license = "MIT"
name = "beamcli"
readme = "README.md"
repository = "https://github.com/MichaelMandel26/beam"
version = "0.5.0"

[dependencies]
anyhow = "1"
clap = {version = "4", features = ["derive"]}
clap_complete = "4"
clearscreen = "1"
colored = "2"
home = "0.5"
indicatif = "0.17"
itertools = "0.12"
lazy_static = "1.4"
regex = "1.10"
reqwest = {version = "0.11", default-features = false, features = ["rustls-tls"]}
semver = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
skim = "0.10"
tokio = {version = "1", features = ["full"]}
toml = "0.8"
whoami = "1.4"

[dev-dependencies]
httpmock = "0.6"
